--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -10,11 +10,28 @@
     [ngClass]="{ 'content-area-expanded': !sidebarOpen }">
     <div class="toolbar">
       <h2>Room Management</h2>
-      <button mat-stroked-button color="accent" routerLink="/create-room">
-        <mat-icon>add</mat-icon>
-        Create Room
-      </button>
+
+      <div class="toolbar-actions">
+        <div class="custom-search">
+          <mat-icon class="search-icon">search</mat-icon>
+          <input
+            type="text"
+            (input)="applyFilter($event)"
+            placeholder="Search public content"
+            class="search-input"
+          />
+        </div>
+
+
+        <button mat-stroked-button color="accent" (click)="openCreateDialog()">
+          <mat-icon>add</mat-icon>
+          Create Room
+        </button>
+      </div>
     </div>
+
+
+
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
       <!-- Checkbox -->
@@ -35,7 +52,7 @@
         </td>
       </ng-container>
 
-      <!-- Image -->
+
       <ng-container matColumnDef="image">
         <th mat-header-cell *matHeaderCellDef>Room Picture</th>
         <td mat-cell *matCellDef="let row">
@@ -43,25 +60,23 @@
         </td>
       </ng-container>
 
-      <!-- Name -->
+
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Room Name</th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
-      <!-- Description -->
+
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let row">{{ row.description }}</td>
       </ng-container>
 
-      <!-- Created At -->
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
         <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
       </ng-container>
 
-      <!-- Members -->
       <ng-container matColumnDef="members">
         <th mat-header-cell *matHeaderCellDef>Active Members</th>
         <td mat-cell *matCellDef="let row">{{ row.members }}</td>
@@ -86,12 +101,12 @@
         </td>
       </ng-container>
 
-      <!-- Render rows -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [length]="dataSource.length" [pageSize]="10" [pageSizeOptions]="[5, 10, 25]">
-    </mat-paginator>
+    <mat-paginator [pageSize]="3" [pageSizeOptions]="[1, 3, 5]"></mat-paginator>
+
+
   </mat-sidenav-content>
 </mat-sidenav-container>
