--- a/src/app/dialog/sign-in/sign-in.component.css
+++ b/src/app/dialog/sign-in/sign-in.component.css
@@ -65,3 +65,20 @@
     }
   }
 }
+.signup-link {
+  text-align: center;
+  margin-top: 12px;
+  font-size: 14px;
+  color: #555;
+}
+
+.signup-link a {
+  color: #1976d2;
+  text-decoration: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
