--- a/src/app/dialog/sign-up/sign-up.component.css
+++ b/src/app/dialog/sign-up/sign-up.component.css
@@ -65,3 +65,21 @@
     }
   }
 }
+.signin-link {
+  text-align: center;
+  margin-top: 12px;
+  font-size: 14px;
+  color: #555;
+}
+
+.signin-link a {
+  color: #1976d2;
+  text-decoration: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.signin-link a:hover {
+  text-decoration: underline;
+}
+
