--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -5,23 +5,19 @@
     <app-sidebar [open]="sidebarOpen"></app-sidebar>
   </mat-sidenav>
 
-  <mat-sidenav-content
-    class="main-content management-container"
-    [ngClass]="{ 'content-area-expanded': !sidebarOpen }">
+  <mat-sidenav-content class="main-content management-container"
+                       [ngClass]="{ 'content-area-expanded': !sidebarOpen }">
     <div class="toolbar">
       <h2>Room Management</h2>
 
       <div class="toolbar-actions">
         <div class="custom-search">
           <mat-icon class="search-icon">search</mat-icon>
-          <input
-            type="text"
-            (input)="applyFilter($event)"
-            placeholder="Search public content"
-            class="search-input"
-          />
+          <input type="text"
+                 (input)="applyFilter($event)"
+                 placeholder="Search public content"
+                 class="search-input" />
         </div>
-
 
         <button mat-stroked-button color="accent" (click)="openCreateDialog()">
           <mat-icon>add</mat-icon>
@@ -30,10 +26,8 @@
       </div>
     </div>
 
-
-
-
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z1" matSort>
+
       <!-- Checkbox -->
       <ng-container matColumnDef="select">
         <th mat-header-cell *matHeaderCellDef>
@@ -52,36 +46,39 @@
         </td>
       </ng-container>
 
-
+      <!-- Room Image -->
       <ng-container matColumnDef="image">
         <th mat-header-cell *matHeaderCellDef>Room Picture</th>
         <td mat-cell *matCellDef="let row">
-          <img [src]="row.image" width="100" height="60" />
+          <img [src]="row.image" width="100" height="60" alt="Room Image" />
         </td>
       </ng-container>
 
-
+      <!-- Room Name -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Room Name</th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
-
+      <!-- Description -->
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let row">{{ row.description }}</td>
       </ng-container>
 
+      <!-- Created At -->
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Created At</th>
         <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
       </ng-container>
 
+      <!-- Members -->
       <ng-container matColumnDef="members">
         <th mat-header-cell *matHeaderCellDef>Active Members</th>
         <td mat-cell *matCellDef="let row">{{ row.members }}</td>
       </ng-container>
 
+      <!-- Actions -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
@@ -101,8 +98,15 @@
         </td>
       </ng-container>
 
+      <!-- Render header -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Render body using @if + @for -->
+      @if (roomList.length > 0) {
+        @for (row of roomList; track row) {
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        }
+      }
     </table>
 
     <mat-paginator [pageSize]="3" [pageSizeOptions]="[1, 3, 5]"></mat-paginator>
