--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -50,41 +50,40 @@
         </ng-container>
 
         <ng-container matColumnDef="image">
-          <th mat-header-cell *matHeaderCellDef>Image</th>
-          <td mat-cell *matCellDef="let row">
+          <th mat-header-cell *matHeaderCellDef class="col-image">Image</th>
+          <td mat-cell *matCellDef="let row" class="col-image">
             <img [src]="row.image" width="100" height="60" />
           </td>
         </ng-container>
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Event</th>
-          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-name">Event</th>
+          <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.name, 20) }}</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef>Description</th>
-          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-description">Description</th>
+          <td mat-cell *matCellDef="let row" class="col-description">{{ truncateText(row.description, 35) }}</td>
         </ng-container>
 
         <ng-container matColumnDef="registerStart">
-          <th mat-header-cell *matHeaderCellDef>Start</th>
-          <td mat-cell *matCellDef="let row">{{ row.registerStart | date:'shortDate' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-date">Start</th>
+          <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerStart | date:'shortDate' }}</td>
         </ng-container>
 
         <ng-container matColumnDef="registerEnd">
-          <th mat-header-cell *matHeaderCellDef>End</th>
-          <td mat-cell *matCellDef="let row">{{ row.registerEnd | date:'shortDate' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-date">End</th>
+          <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerEnd | date:'shortDate' }}</td>
         </ng-container>
 
         <ng-container matColumnDef="eventDate">
-          <th mat-header-cell *matHeaderCellDef>Event Date</th>
-          <td mat-cell *matCellDef="let row">{{ row.eventDate | date:'shortDate' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-date">Event Date</th>
+          <td mat-cell *matCellDef="let row" class="col-date">{{ row.eventDate | date:'shortDate' }}</td>
         </ng-container>
 
-
         <ng-container matColumnDef="participants">
-          <th mat-header-cell *matHeaderCellDef>Participants</th>
-          <td mat-cell *matCellDef="let row">{{ row.participants }}</td>
+          <th mat-header-cell *matHeaderCellDef class="col-participants">Participants</th>
+          <td mat-cell *matCellDef="let row" class="col-participants">{{ row.participants }}</td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
