--- a/src/app/pages/admin/management-room/management-room.component.html
+++ b/src/app/pages/admin/management-room/management-room.component.html
@@ -54,29 +54,29 @@
         </td>
       </ng-container>
 
-      <!-- Room Name -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Room Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-name">Room Name</th>
+        <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.name, 10) }}</td>
       </ng-container>
 
       <!-- Description -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-description">Description</th>
+        <td mat-cell *matCellDef="let row" class="col-description">{{ truncateText(row.description, 50) }}</td>
       </ng-container>
 
       <!-- Created At -->
       <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'shortDate' }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-date">Created At</th>
+        <td mat-cell *matCellDef="let row" class="col-date">{{ row.createdAt | date:'shortDate' }}</td>
       </ng-container>
 
       <!-- Members -->
       <ng-container matColumnDef="members">
-        <th mat-header-cell *matHeaderCellDef>Active Members</th>
-        <td mat-cell *matCellDef="let row">{{ row.members }}</td>
+        <th mat-header-cell *matHeaderCellDef class="col-members">Active Members</th>
+        <td mat-cell *matCellDef="let row" class="col-members">{{ row.members }}</td>
       </ng-container>
+
 
       <!-- Actions -->
       <ng-container matColumnDef="actions">
