--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -58,7 +58,7 @@
 
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef class="col-name">Event</th>
-          <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.name, 20) }}</td>
+          <td mat-cell *matCellDef="let row" class="col-name">{{ truncateText(row.title, 20) }}</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
