--- a/src/app/pages/admin/management-room/components/edit-room-dialog/edit-room-dialog.component.html
+++ b/src/app/pages/admin/management-room/components/edit-room-dialog/edit-room-dialog.component.html
@@ -42,6 +42,15 @@
 </div>
 
 <div class="dialog-actions">
-  <button mat-stroked-button color="warn" (click)="cancel()">Cancel</button>
+  <button
+    mat-stroked-button color="warn"
+    style="
+      color: #CD5656;
+      border-color: #ccc;
+      background-color: #f9faf3;
+    "
+    onmouseover="this.style.backgroundColor='#CD5656';this.style.color='#fff'"
+    onmouseout="this.style.backgroundColor='#f9faf3'; this.style.color='#CD5656'"
+    (click)="cancel()">Cancel</button>
   <button mat-raised-button color="primary" (click)="save()">Save</button>
 </div>
