--- a/src/app/pages/admin/management-event/management-event.component.html
+++ b/src/app/pages/admin/management-event/management-event.component.html
@@ -1,12 +1,9 @@
-
 <app-topbar (menuClick)="toggleSidebar()"></app-topbar>
-
 <div class="main-wrapper">
   <mat-sidenav-container class="layout-container">
     <mat-sidenav mode="side" [opened]="sidebarOpen">
       <app-sidebar [open]="sidebarOpen"></app-sidebar>
     </mat-sidenav>
-
     <mat-sidenav-content class="main-content">
 
       <div class="toolbar">
@@ -67,20 +64,19 @@
         </ng-container>
 
         <ng-container matColumnDef="registerStart">
-          <th mat-header-cell *matHeaderCellDef class="col-date">Start</th>
+          <th mat-header-cell *matHeaderCellDef class="col-date">Register Date</th>
           <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerStart | date:'shortDate' }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="registerEnd">
-          <th mat-header-cell *matHeaderCellDef class="col-date">End</th>
-          <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerEnd | date:'shortDate' }}</td>
-        </ng-container>
-
         <ng-container matColumnDef="eventDate">
-          <th mat-header-cell *matHeaderCellDef class="col-date">Event Date</th>
+          <th mat-header-cell *matHeaderCellDef class="col-date">Event Start</th>
           <td mat-cell *matCellDef="let row" class="col-date">{{ row.eventDate | date:'shortDate' }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="registerEnd">
+          <th mat-header-cell *matHeaderCellDef class="col-date">Event End</th>
+          <td mat-cell *matCellDef="let row" class="col-date">{{ row.registerEnd | date:'shortDate' }}</td>
+        </ng-container>
         <ng-container matColumnDef="participants">
           <th mat-header-cell *matHeaderCellDef class="col-participants">Participants</th>
           <td mat-cell *matCellDef="let row" class="col-participants">{{ row.participants }}</td>
