--- a/src/app/pages/admin/management-profile/management-profile.component.css
+++ b/src/app/pages/admin/management-profile/management-profile.component.css
@@ -19,25 +19,7 @@ app-topbar {
   flex-direction: column;
 }
 
-mat-sidenav-container {
-  flex: 1;
-  display: flex;
-  height: calc(100vh - 64px);
-}
 
-mat-sidenav {
-  width: 200px;
-  background-color: #4caf82;
-  color: white;
-}
-
-mat-sidenav-content {
-  width: 100%;
-  padding: 84px 20px 20px 20px;
-  background-color: #f5f5f5;
-  overflow: auto;
-  box-sizing: border-box;
-}
 .custom-search {
   display: flex;
   align-items: center;
@@ -164,3 +146,27 @@ td {
   border-radius: 4px;
   margin-top: 20px;
 }
+.main-wrapper {
+  display: flex;
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #f5f5f5;
+  margin-left: 200px;
+  margin-top: 64px;
+  width: calc(100% - 200px);
+  height: calc(100vh - 64px);
+  overflow-y: auto;
+  transition: all 0.3s ease;
+}
+
+.main-content.collapsed {
+  margin-left: 70px;
+  width: calc(100% - 70px);
+}
+.row-inactive {
+  opacity: 0.4;
+}
+
