--- a/src/app/pages/admin/management-profile/management-profile.component.html
+++ b/src/app/pages/admin/management-profile/management-profile.component.html
@@ -1,24 +1,24 @@
-<app-topbar></app-topbar>
-<div class="layout-container">
-  <mat-sidenav-container>
-    <mat-sidenav mode="side" opened class="sidenav">
-      <app-sidebar></app-sidebar>
-    </mat-sidenav>
+<app-topbar (menuClick)="toggleSidebar()"></app-topbar>
 
-    <mat-sidenav-content class="main-content">
-      <div class="toolbar">
-        <h2>Profile User</h2>
-        <div class="toolbar-actions">
+<div class="main-wrapper">
+  <app-sidebar [open]="sidebarOpen" [class.collapsed]="!sidebarOpen"></app-sidebar>
 
-          <div class="custom-search">
-            <mat-icon class="search-icon">search</mat-icon>
-            <input class="search-input" [(ngModel)]="searchTerm" placeholder="Search user..." />
-          </div>
+  <div class="main-content" [ngClass]="{ 'collapsed': !sidebarOpen }">
+    <div class="toolbar">
+      <h2>Profile User</h2>
 
-
+      <div class="toolbar-actions">
+        <div class="custom-search">
+          <mat-icon class="search-icon">search</mat-icon>
+          <input
+            class="search-input"
+            [(ngModel)]="searchTerm"
+            placeholder="Search user..."
+            (input)="updatePaginator()"
+          />
         </div>
       </div>
-
+    </div>
 
 
 
@@ -64,25 +64,19 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row">
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-              <mat-icon>more_vert</mat-icon>
+            <button mat-icon-button (click)="toggleVisibility(row)">
+              <mat-icon>{{ row.isActive ? 'toggle_on' : 'toggle_off' }}</mat-icon>
             </button>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="editUser(row)">
-                <mat-icon>edit</mat-icon>
-                <span>Edit</span>
-              </button>
-              <button mat-menu-item (click)="deleteUser(row)">
-                <mat-icon>delete</mat-icon>
-                <span>Delete</span>
-              </button>
-            </mat-menu>
+
           </td>
         </ng-container>
 
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row
+            *matRowDef="let row; columns: displayedColumns;"
+            [ngClass]="{ 'row-inactive': !row.isActive }">
+        </tr>
+
       </table>
 
       <mat-paginator
@@ -93,6 +87,5 @@
         (page)="onPageEvent($event)">
       </mat-paginator>
 
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+  </div>
 </div>
