--- a/src/app/pages/admin/management-room/management-room.component.css
+++ b/src/app/pages/admin/management-room/management-room.component.css
@@ -19,24 +19,6 @@ app-topbar {
   flex-direction: column;
 }
 
-mat-sidenav-container {
-  flex: 1;
-  display: flex;
-  height: calc(100vh - 64px);
-}
-
-mat-sidenav {
-  width: 200px;
-  background-color: #4caf82;
-  color: white;
-}
-
-mat-sidenav-content {
-  padding: 84px 20px 20px 20px;
-  background-color: #f5f5f5;
-  overflow: auto;
-  box-sizing: border-box;
-}
 
 .toolbar {
   display: flex;
@@ -166,4 +148,25 @@ td img {
   max-width: 100px;
   text-align: center;
   white-space: nowrap;
+}
+
+.main-wrapper {
+  display: flex;
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #f5f5f5;
+  margin-left: 200px;
+  margin-top: 64px;
+  width: calc(100% - 200px);
+  height: calc(100vh - 64px);
+  overflow-y: auto;
+  transition: all 0.3s ease;
+}
+
+.main-content.collapsed {
+  margin-left: 70px;
+  width: calc(100% - 70px);
 }
