--- a/src/app/pages/admin/admin-page/components/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/admin-page/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar" [class.collapsed]="!open">
+<aside class="sidebar" [class.collapsed]="!open">
   <div class="sidebar-inner">
     <div class="menu-items">
       @for (item of menuItems; track item.route) {
@@ -30,4 +30,4 @@
       </a>
     </div>
   </div>
-</div>
+</aside>
