--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
       <a class="menu-item"
          [class.active]="activeItem === 'sign out'"
          (click)="setActive('sign out'); handleLogout()">
-        <mat-icon>logout</mat-icon>
+        <mat-icon>exit_to_app</mat-icon>
         <span *ngIf="open">Sign out</span>
       </a>
     </div>
